CHANGELOGS/1.0.0/26m05d24a.md
# Snapshot - 24.05.2026 - 0.5.1

## fix(installer): keyboard input in main menu

Typing option numbers (2, 3) in the installer welcome menu had no effect —
only Enter worked, always selecting the default option 1.

**Root cause:** busybox init does not fully initialise the tty when spawning a
process directly from an inittab `respawn` entry — unlike `getty`, which calls
`setsid()` + `TIOCSCTTY` and sets canonical mode before exec. `read -r`
received only the newline from Enter; all other keystrokes were silently dropped
on the VGA console.

**Fix:**
- `genapkovl-yunexal.sh` inittab: switched from direct spawn to
  `getty -n -l /usr/local/sbin/yunexal-installer` — getty initialises the tty
  fully, then execs the installer without showing a login prompt (`-n`).
- `/etc/issue` is now overridden in the apkovl to say "Yunexal Musl Panel Installer"
  so the brief getty `/etc/issue` display is on-brand before the TUI clears it.
- `yunexal-installer.sh`: `stty sane` is kept as a defensive fallback for any
  future launch path that bypasses getty.

---

## feat(installer): back navigation between steps

Added `b` / `B` input to navigate backwards through the installation wizard.
Previously, a mistake at any step required restarting from the welcome menu.

**How it works:**
- At the first prompt of each step (keyboard, networking, storage, profile,
  confirm-partitions, confirm-changes) the user can type `b` to go back one step.
- `step_label` now shows `(b = back)` on steps 2–7.
- `step_confirm_partitions` uses a new `wait_key_or_back` helper
  (`Enter = continue · b = back`).
- `step_confirm_changes` replaces the `y/N` confirm with an explicit
  `y = install · b = back · n = cancel` prompt.
- Back from step 1 (requirements) returns to the main menu.

**Implementation:** replaced the linear `step_requirements || continue; step_keyboard; …`
chain with a `_run_wizard()` step machine that increments/decrements `_step`
based on return codes — `0` = next, `2` = back, anything else = abort to menu.

---

## chore(installer): OS snapshot version and dual version display

**OS version** (`/etc/os-release`) now follows the snapshot naming convention
(`26m05d24a`) instead of the semver panel release (`0.5.1`):

```
NAME="Yunexal Musl Panel"
VERSION="26m05d24a"
VERSION_ID="26m05d24a"
PRETTY_NAME="Yunexal Musl Panel 26m05d24a"
```

**Installer header** now shows both versions so the user knows exactly what
they are installing:

```
  Panel 0.5.1  ·  26m05d24a  ·  x86_64
```

- `Panel 0.5.1` — the Yunexal Musl Panel release version
- `26m05d24a` — the ISO/OS snapshot build identifier

---

## chore(iso): server-only kernel module policy

Expanded modprobe blacklist to cover all non-server driver families.
Previously only wireless and printer modules were disabled.

**Disabled categories** (both live installer and installed target):
- **Bluetooth**: bluetooth, btusb, bnep, rfcomm, hidp, btbcm, btintel, btrtl, btqca
- **Audio/Sound**: snd_hda_intel, snd_hda_codec, snd_ac97_codec, snd_seq, soundcore, ac97_bus (full family)
- **GPU drivers**: nouveau, radeon, amdgpu, i915, ast, mgag200, cirrus — vesafb/efifb is sufficient for text console
- **Webcam/Camera**: uvcvideo, gspca_main
- **TV/DVB/Media capture**: dvb_core, media, videodev, v4l2_common, tveeprom
- **Joystick/Gamepad**: joydev, gameport
- **PCMCIA**: pcmcia, pcmcia_core, yenta_socket, rsrc_nonstatic
- **FireWire/IEEE 1394**: firewire_core, firewire_ohci, firewire_sbp2, firewire_net
- **NFC**: nfc
- **CEC (HDMI ARC)**: cec
- **Floppy**: floppy
- **Infrared**: ite_cir, mceusb, nuvoton_cir, rc_core
- **Amateur radio protocols**: ax25, netrom, rose

**Renamed** `yunexal-disable-unsupported.conf` → `yunexal-server-only.conf`
to better reflect intent.

**Kept** (required for server operation):
- Ethernet NIC drivers (e1000e, igb, ixgbe, r8169, virtio_net, etc.)
- Storage/NVMe/SCSI/virtio_blk
- USB storage + USB HID (keyboard for installation)
- Basic framebuffer (vesafb, efifb) for VGA console
- `cirrus` — downgraded from `install /bin/false` to `blacklist` only, so QEMU's
  Cirrus Logic VGA emulation continues to work during installer testing.

---

## chore(iso): remove visible Alpine Linux branding

All user-visible mentions of "Alpine Linux" have been removed. Alpine remains
the underlying base (kernel, APK, OpenRC) but is no longer presented to the
user.

**Changes:**
- `genapkovl-yunexal.sh`: apkovl embeds `etc/issue` → `Yunexal Musl Panel Installer`
  and `etc/os-release` with `NAME="Yunexal Musl Panel"`, `ID=yunexal`,
  `ID_LIKE=alpine` (keeps Alpine compat for tools that check `ID_LIKE`).
- `yunexal-installer.sh`: removed Alpine branding from the installer header;
  renamed system to `Yunexal Musl Panel` throughout.
- `prepare-custom-tree.sh`: grub.cfg and syslinux.cfg are overwritten with
  Yunexal labels so the boot menu no longer says "Linux lts".
- Added `console=tty1` to the kernel command line so the active VT is pinned
  to tty1 in QEMU — the installer is visible on the default VGA screen without
  a manual VT switch.

---

## chore(repo): publish ISO and release build scripts

`scripts/iso/` and `scripts/release/` were previously excluded from the
repository via `.gitignore`. They are now tracked.

**Added to repository:**
- `scripts/iso/` — full ISO build pipeline (genapkovl, mkimg, prepare-custom-tree,
  repack-custom-iso, fetch-base-iso, yunexal-installer, docker-build, auto-build-iso)
- `scripts/release/build-musl.sh` — cross-compiles panel + setup binaries for
  musl/Alpine targets
- `.gitignore`: `/scripts/` → `/scripts/local/` (reserves `local/` for
  machine-specific scripts that should never be committed)
